--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <img src="https://i.imgur.com/hpjrgcl.png" alt="NieuweDuinen Logo">
         <h1>NieuweDuinen Roleplay</h1>
         <p>Beleef epische avonturen in de bruisende kuststad NieuweDuinen!</p>
-        <a href="https://discord.gg/nieuwe-duinen" target="_blank" class="button">Join onze Discord!</a>
+        <a href="https://discord.gg/nieuweduinenrp" target="_blank" class="button">Join onze Discord!</a>
     </header>
     <main>
         <section id="welcome">
@@ -41,7 +41,7 @@
                 Welkom bij NieuweDuinen Roleplay
             </h2>
             <p>Duik in onze levendige FiveM-community en creëer jouw eigen verhaal in de fictieve kuststad NieuweDuinen. Of je nu een politieagent, ondernemer, of avonturier bent, onze server biedt een realistische en gezellige roleplay-ervaring. Sluit je aan via Discord en start vandaag!</p>
-            <a href="https://discord.gg/nieuwe-duinen" target="_blank" class="button">Begin je avontuur</a>
+            <a href="https://discord.gg/nieuweduinenrp" target="_blank" class="button">Begin je avontuur</a>
         </section>
     </main>
     <footer>
@@ -58,11 +58,9 @@
             const isExpanded = navMenu.classList.toggle('show');
             hamburger.setAttribute('aria-expanded', isExpanded);
             navMenu.setAttribute('aria-hidden', !isExpanded);
-            // Voorkom scrollen van body als menu open is
             document.body.style.overflow = isExpanded ? 'hidden' : '';
         });
 
-        // Sluit menu na klik op een link
         navLinks.forEach(link => {
             link.addEventListener('click', () => {
                 navMenu.classList.remove('show');
