--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 <body>
     <button class="theme-toggle" onclick="toggleTheme()" aria-label="Wissel tussen dark en light mode">Dark Mode</button>
     <header>
+        <video autoplay loop muted playsinline aria-hidden="true">
+            <source src="https://via.placeholder.com/video.mp4" type="video/mp4">
+        </video>
         <nav>
             <button class="hamburger" aria-label="Open navigatiemenu" aria-expanded="false">☰</button>
             <ul id="nav-menu" aria-hidden="true">
@@ -42,6 +45,72 @@
             </h2>
             <p>Duik in onze levendige FiveM-community en creëer jouw eigen verhaal in de fictieve kuststad NieuweDuinen. Of je nu een politieagent, ondernemer, of avonturier bent, onze server biedt een realistische en gezellige roleplay-ervaring. Sluit je aan via Discord en start vandaag!</p>
             <a href="https://discord.gg/nieuweduinenrp" target="_blank" class="button">Begin je avontuur</a>
+        </section>
+        <section id="community-spotlight">
+            <h2>
+                <svg viewBox="0 0 24 24">
+                    <path d="M12 2l2.39 6.36h6.48l-5.24 4.04 2 6.36-5.24-4.04-5.24 4.04 2-6.36L2.13 8.36h6.48L12 2z"/>
+                </svg>
+                Community Spotlight
+            </h2>
+            <div class="carousel-container">
+                <button class="carousel-button prev" aria-label="Vorige slide">&#10094;</button>
+                <div class="carousel">
+                    <div class="carousel-item">
+                        <img src="https://via.placeholder.com/600x300?text=Politieachtervolging" alt="Politieachtervolging in NieuweDuinen">
+                        <p>"Een spannende achtervolging door de straten van NieuweDuinen!" - AgentMike</p>
+                        <a href="https://discord.gg/nieuweduinenrp" target="_blank" class="button">Join de actie</a>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="https://via.placeholder.com/600x300?text=Community-Event" alt="Community-evenement in NieuweDuinen">
+                        <p>"De autorace was episch! Geweldige community!" - RacerX</p>
+                        <a href="https://discord.gg/nieuweduinenrp" target="_blank" class="button">Doe mee</a>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="https://via.placeholder.com/600x300?text=Roleplay-Moment" alt="Roleplay-moment in NieuweDuinen">
+                        <p>"Mijn winkelopening was een succes dankzij de community!" - ShopOwner</p>
+                        <a href="https://discord.gg/nieuweduinenrp" target="_blank" class="button">Start jouw verhaal</a>
+                    </div>
+                </div>
+                <button class="carousel-button next" aria-label="Volgende slide">&#10095;</button>
+            </div>
+            <div class="discord-status">
+                <p>150 spelers online op onze Discord!</p>
+                <a href="https://discord.gg/nieuweduinenrp" target="_blank" class="button">Sluit je aan</a>
+            </div>
+            <div class="player-of-month">
+                <h3>Speler van de Maand</h3>
+                <img src="https://via.placeholder.com/300x300?text=Speler+Foto" alt="Speler van de Maand: CommunityHero">
+                <p>"CommunityHero organiseerde een onvergetelijke bankoverval-RP die iedereen versteld deed staan!"</p>
+                <a href="https://discord.gg/nieuweduinenrp" target="_blank" class="button">Ontmoet onze community</a>
+            </div>
+            <div class="map-container">
+                <h3>Ontdek NieuweDuinen</h3>
+                <svg viewBox="0 0 600 400" role="img" aria-label="Interactieve kaart van NieuweDuinen">
+                    <rect x="0" y="0" width="600" height="400" fill="#e5e7eb" stroke="#4db2d1" stroke-width="2"/>
+                    <circle class="location" cx="150" cy="100" r="20" fill="#60a5fa" data-popup="politiebureau" tabindex="0" aria-label="Politiebureau"/>
+                    <circle class="location" cx="450" cy="300" r="20" fill="#60a5fa" data-popup="racebaan" tabindex="0" aria-label="Racebaan"/>
+                </svg>
+                <div class="map-popup" id="politiebureau">
+                    <h3>Politiebureau</h3>
+                    <p>Het hart van de ordehandhaving in NieuweDuinen. Solliciteer voor een rol als agent!</p>
+                </div>
+                <div class="map-popup" id="racebaan">
+                    <h3>Racebaan</h3>
+                    <p>Doe mee aan spannende races en laat je vaardigheden zien!</p>
+                </div>
+            </div>
+            <div class="event-list">
+                <h3>Aankomende Evenementen</h3>
+                <div class="event-item">
+                    <h3>Autorace</h3>
+                    <p>31 juli 2025, 20:00 - Doe mee aan onze wekelijkse race!</p>
+                </div>
+                <div class="event-item">
+                    <h3>Politie Open Dag</h3>
+                    <p>5 augustus 2025, 18:00 - Ontdek het leven als agent!</p>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
@@ -86,6 +155,59 @@
             document.querySelector('.theme-toggle').textContent = savedTheme === 'dark' ? 'Light Mode' : 'Dark Mode';
             navMenu.setAttribute('aria-hidden', !navMenu.classList.contains('show'));
         });
+
+        // Carousel functionality
+        const carousel = document.querySelector('.carousel');
+        const prevButton = document.querySelector('.carousel-button.prev');
+        const nextButton = document.querySelector('.carousel-button.next');
+        const items = document.querySelectorAll('.carousel-item');
+        let currentIndex = 0;
+
+        function updateCarousel() {
+            carousel.style.transform = `translateX(-${currentIndex * 100}%)`;
+            prevButton.disabled = currentIndex === 0;
+            nextButton.disabled = currentIndex === items.length - 1;
+        }
+
+        prevButton.addEventListener('click', () => {
+            if (currentIndex > 0) {
+                currentIndex--;
+                updateCarousel();
+            }
+        });
+
+        nextButton.addEventListener('click', () => {
+            if (currentIndex < items.length - 1) {
+                currentIndex++;
+                updateCarousel();
+            }
+        });
+
+        // Map interactivity
+        const locations = document.querySelectorAll('.location');
+        const popups = document.querySelectorAll('.map-popup');
+
+        function hideAllPopups() {
+            popups.forEach(popup => popup.classList.remove('show'));
+        }
+
+        locations.forEach(location => {
+            location.addEventListener('click', () => {
+                hideAllPopups();
+                const popupId = location.getAttribute('data-popup');
+                document.getElementById(popupId).classList.add('show');
+            });
+
+            location.addEventListener('keydown', (e) => {
+                if (e.key === 'Enter' || e.key === ' ') {
+                    hideAllPopups();
+                    const popupId = location.getAttribute('data-popup');
+                    document.getElementById(popupId).classList.add('show');
+                }
+            });
+        });
+
+        updateCarousel();
     </script>
 </body>
 </html>
